test/types/records/split-init/split-init-ref-lifetime-error.chpl
proc test() {

  ref x;
  {
    var innerInt = 4;
    x = innerInt;
  }

  writeln(x);
}
test();
